# forschung.stadtgeschichtebasel.ch

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  API.md  CONTRIBUTING.md  README.md  SETUP.md  TROUBLESHOOTING.md  cliff.toml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  jekyll.yml  process_data.py
_data/: config-metadata.csv  config-nav.csv  config-theme-colors.csv  theme.yml  translations.yml
_includes/: collection-nav-sgb.html  data-download-modal.html  footer-sgb.html  footer.html  nav-search-lunr.html  scroll-to-top.html
_includes/index/: data-download.html  description.html  random-cards.html
_includes/item/: browse-buttons.html  download-buttons.html  metadata.html
_includes/item/child/: compound-item-download-buttons.html  compound-item-modal-gallery.html  download-buttons.html  metadata.html  table.html
_includes/js/: browse-js.html  cloud-js.html  list-js.html  table-js.html  zotero-table-js.html
_layouts/: browse.html  data.html  list.html  search.html  zotero.html
_layouts/item/: item-page-base.html
_sass/: _custom.scss  _theme-colors.scss
assets/data/: timelinejs.json
docs/: index.md
pages/: accessibility.md  data.md  datamodel.md  index.md  privacy.md  zotero.md
tests/: test_process_data.py
