[project]
name = "forschung.stadtgeschichtebasel.ch"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty==0.0.56",
]

[tool.ruff]
target-version = "py313"
extend-exclude = ["vendor", ".venv"]
